# marex

./: .clang-format  CMakeLists.txt  main.mrx
LICENSES/LLVM/: AUTHORS
LICENSES/matchit.cpp/: AUTHORS  LICENSE
include/marex/Core/: Mod.h.h
include/marex/core/: Core.h
lib/: CMakeLists.txt
lib/core/: CMakeLists.txt  Core.cpp  Mod.cpp
lib/lexer/: Lexer.cpp
src/: CMakeLists.txt  main.cpp
src/lexer/: CMakeLists.txt  lexer.cpp  lexer.h
src/token/: CMakeLists.txt  Token.h
